--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <link href="css/themes.css" rel="stylesheet" />
         <link href="css/site.css" rel="stylesheet" />-->
         <link href="css/all.min.css" rel="stylesheet" />
+        <!--<script src="js/almond.min.js"></script>-->
     </head>
     <body class="default f320">
         <div class="nav dark bg1">
@@ -23,7 +24,7 @@
                 </ul>
             </div>
         </div>
-        <div class="banner home dark">
+        <div class="banner home dark" id="carousel1">
             <div class="content">
                 <h1 class="c1" id="home">Alley</h1>
                 <h2 class="c1">No bloat layouts</h2>
@@ -208,8 +209,6 @@
 .col {
     display: table-cell;
     vertical-align: top;
-    border-spacing: 0 0;
-    margin: 0;
 }
 
 .w1of1 { width: 100%; }
@@ -237,7 +236,7 @@
                         <img src="images/alley.jpg" alt="image" class="w1of1" />
                         <h2 class="c1">Light theme</h2>
                         <p>This is an example of the same html with a different themes applied to each</p>
-                        <p><a href="#" target="_blank" class="c1">Read more</a></p>
+                        <p><a href="#themes" class="c1">Read more</a></p>
                     </div>
                 </div>
                 <div class="col w1of3">
@@ -245,7 +244,7 @@
                         <img src="images/alley.jpg" alt="image" class="w1of1" />
                         <h2 class="c1">Default theme</h2>
                         <p>This theme is applied to the entire site by default</p>
-                        <p><a href="#" target="_blank" class="c1">Read more</a></p>
+                        <p><a href="#themes" class="c1">Read more</a></p>
                     </div>
                 </div>
                 <div class="col w1of3 dark">
@@ -253,7 +252,7 @@
                         <img src="images/alley.jpg" alt="image" class="w1of1" />
                         <h2 class="c1">Dark theme</h2>
                         <p>This is an example of the same html with a different themes applied to each</p>
-                        <p><a href="#" target="_blank" class="c1">Read more</a></p>
+                        <p><a href="#themes" class="c1">Read more</a></p>
                     </div>
                 </div>
             </div>
@@ -500,6 +499,14 @@ form, input, textarea, select, fieldset {
 }</pre>
             <p><a href="css/reset.css" target="_blank">View (0.4KB)</a></p>
         </div>
-        <script src="js/Main.js"></script>
+        <!--<script src="js/Utils.js"></script>
+        <script src="js/Child.js"></script>
+        <script src="js/Carousel.js"></script>-->
+        <script src="js/all.min.js"></script>
+        <script>
+            require(['Carousel'], function(Carousel) {
+                var carousel1 = new Carousel('carousel1', { option: 'example', hello: 1 });
+            });
+        </script>
     </body>
 </html>
