--- a/index.html
+++ b/index.html
@@ -75,10 +75,10 @@
             </div>
             <div class="row flow-m">
                 <div class="col">
-                    <p>Suspendisse posuere odio dignissim</p>
+                    <p>Suspendisse posuere.</p>
                 </div>
                 <div class="col">
-                    <p>Lorem ipsum dolor sit amet</p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum urna metus, vulputate nec semper vel, imperdiet non lectus. Sed lorem tortor, commodo pretium egestaum tempor nib et sollicitu.</p>
                 </div>
             </div>
             <div class="row">
