need some helper classes
updated readme to match

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <div class="col">
                     <img src="images/alley.jpg" alt="image" class="w1of1" />
                     <h2>Tiny footprint</h2>
-                    <p>&lt;1KB for the layout and reset css. Tested working on Firefox, Safari, Chrome, IE8+</p>
+                    <p>1KB for the layout and reset css. Tested working on Firefox, Safari, Chrome, IE8+</p>
                 </div>
                 <div class="col">
                     <img src="images/alley.jpg" alt="image" class="w1of1" />
@@ -69,134 +69,66 @@
         </div>
         <div class="section debug">
             <div class="row">
-                <div class="col">
-                    <p>Suspendisse posuere</p>
-                </div>
+                <div class="col">col</div>
             </div>
             <div class="row flow-m">
-                <div class="col">
-                    <p>Suspendisse posuere.</p>
-                </div>
-                <div class="col">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum urna metus, vulputate nec semper vel, imperdiet non lectus. Sed lorem tortor, commodo pretium egestaum tempor nib et sollicitu.</p>
-                </div>
+                <div class="col">col</div>
+                <div class="col">col</div>
             </div>
             <div class="row">
-                <div class="col">
-                    <p>Suspendisse posuere odio dignissim elit mollis pharetra. Fusce ornare magna ac purus fermentum sit amet consequat odio mattis. Quisque vitae tellus tis neque.</p>
-                </div>
-                <div class="col">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum urna metus, vulputate nec semper vel, imperdiet non lectus. Sed lorem tortor, commodo pretium egestaum tempor nib et sollicitu.</p>
-                </div>
-                <div class="col">
-                    <p>Suspendisse posuere odio dignissim elit mollis pharetra. Fusce ornare magna ac purus fermentum sit amet consequat odio mattis. Quisque vitae tellus tis neque.</p>
-                </div>
+                <div class="col">col</div>
+                <div class="col">col</div>
+                <div class="col">col</div>
             </div>
             <div class="row flow-s">
-                <div class="col">
-                    <p>Suspendisse posuere odio dignissim elit mollis pharetra. Fusce ornare magna ac purus fermentum sit amet consequat odio mattis. Quisque vitae tellus tis neque.</p>
-                </div>
-                <div class="col">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum urna metus, vulputate nec semper vel, imperdiet non lectus. Sed lorem tortor, commodo pretium egestaum tempor nib et sollicitu.</p>
-                </div>
-                <div class="col">
-                    <p>Suspendisse posuere odio dignissim elit mollis pharetra. Fusce ornare magna ac purus fermentum sit amet consequat odio mattis. Quisque vitae tellus tis neque.</p>
-                </div>
-                <div class="col">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum urna metus, vulputate nec semper vel, imperdiet non lectus. Sed lorem tortor, commodo pretium egestaum tempor nib et sollicitu.</p>
-                </div>
+                <div class="col">col</div>
+                <div class="col">col</div>
+                <div class="col">col</div>
+                <div class="col">col</div>
             </div>
             <div class="row flow-m">
-                <div class="col">
-                    <p>Suspendisse posuere odio dignissim elit mollis pharetra. Fusce ornare magna ac purus fermentum sit amet consequat odio mattis. Quisque vitae tellus tis neque.</p>
-                </div>
-                <div class="col">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum urna metus, vulputate nec semper vel, imperdiet non lectus. Sed lorem tortor, commodo pretium egestaum tempor nib et sollicitu.</p>
-                </div>
-                <div class="col">
-                    <p>Suspendisse posuere odio dignissim elit mollis pharetra. Fusce ornare magna ac purus fermentum sit amet consequat odio mattis. Quisque vitae tellus tis neque.</p>
-                </div>
-                <div class="col">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum urna metus, vulputate nec semper vel, imperdiet non lectus. Sed lorem tortor, commodo pretium egestaum tempor nib et sollicitu.</p>
-                </div>
-                <div class="col">
-                    <p>Suspendisse posuere odio dignissim elit mollis pharetra. Fusce ornare magna ac purus fermentum sit amet consequat odio mattis. Quisque vitae tellus tis neque.</p>
-                </div>
+                <div class="col">col</div>
+                <div class="col">col</div>
+                <div class="col">col</div>
+                <div class="col">col</div>
+                <div class="col">col</div>
             </div>
             <div class="row">
-                <div class="col">
-                    <p>Suspendisse posuere odio dignissim elit mollis pharetra. Fusce ornare magna ac purus fermentum sit amet consequat odio mattis. Quisque vitae tellus tis neque.</p>
-                </div>
-                <div class="col">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum urna metus, vulputate nec semper vel, imperdiet non lectus. Sed lorem tortor, commodo pretium egestaum tempor nib et sollicitu.</p>
-                </div>
+                <div class="col w2of3">col w2of3</div>
+                <div class="col w1of3">col w1of3<br/>If you use different column widths, one needs some content to ensure the width is respected</div>
             </div>
             <div class="row">
-                <div class="col">
+                <div class="col w2of3">
                     <div class="row flow-m">
-                        <div class="col">
-                            <p>This is an example of a nested multi-column layout which responds at a different size from the content around it</p>
-                        </div>
-                        <div class="col">
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum urna metus, vulputate nec semper vel, imperdiet non lectus. Sed lorem tortor, commodo pretium egestaum tempor nib et sollicitu.</p>
-                        </div>
+                        <div class="col w2of3">col w2of3<br/>You can nest columns inside each other and have them flow at different breakpoints</div>
+                        <div class="col w1of3">col w1of3<br/>If you use different column widths, one needs some content to ensure the width is respected</div>
                     </div>
                 </div>
-                <div class="col">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum urna metus, vulputate nec semper vel, imperdiet non lectus. Sed lorem tortor, commodo pretium egestaum tempor nib et sollicitu.</p>
-                </div>
+                <div class="col w1of3">col w1of3<br/>If you use different column widths, one needs some content to ensure the width is respected</div>
             </div>
             <div class="row flow-m">
-                <div class="col">
-                    <p>Suspendisse posuere odio dignissim elit mollis pharetra. Fusce ornare magna ac purus fermentum sit amet consequat odio mattis. Quisque vitae tellus tis neque.</p>
-                </div>
-                <div class="col">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum urna metus, vulputate nec semper vel, imperdiet non lectus. Sed lorem tortor, commodo pretium egestaum tempor nib et sollicitu.</p>
-                </div>
-                <div class="col">
-                    <p>Suspendisse posuere odio dignissim elit mollis pharetra. Fusce ornare magna ac purus fermentum sit amet consequat odio mattis. Quisque vitae tellus tis neque.</p>
-                </div>
+                <div class="col w1of2">col w1of2</div>
+                <div class="col w1of4">col w1of4</div>
+                <div class="col w1of4">col w1of4<br/>If you use different column widths, one needs some content to ensure the width is respected</div>
             </div>
             <div class="row">
-                <div class="col">
-                    <p>Suspendisse posuere odio dignissim elit mollis pharetra. Fusce ornare magna ac purus fermentum sit amet consequat odio mattis. Quisque vitae tellus tis neque.</p>
-                </div>
-                <div class="col">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum urna metus, vulputate nec semper vel, imperdiet non lectus. Sed lorem tortor, commodo pretium egestaum tempor nib et sollicitu.</p>
-                </div>
-                <div class="col">
-                    <p>Suspendisse posuere odio dignissim elit mollis pharetra. Fusce ornare magna ac purus fermentum sit amet consequat odio mattis. Quisque vitae tellus tis neque.</p>
-                </div>
-                <div class="col">
-                    <p>Suspendisse posuere odio dignissim elit mollis pharetra. Fusce ornare magna ac purus fermentum sit amet consequat odio mattis. Quisque vitae tellus tis neque.</p>
-                </div>
+                <div class="col w2of5">col w2of5</div>
+                <div class="col w1of5">col w1of5</div>
+                <div class="col w1of5">col w1of5</div>
+                <div class="col w1of5">col w1of5<br/>If you use different column widths, one column needs content to ensure the width is respected</div>
             </div>
             <div class="row">
-                <div class="col">
-                    <p>Suspendisse posuere odio dignissim elit mollis pharetra. Fusce ornare magna ac purus fermentum sit amet consequat odio mattis. Quisque vitae tellus tis neque.</p>
-                </div>
-                <div class="col">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum urna metus, vulputate nec semper vel, imperdiet non lectus. Sed lorem tortor, commodo pretium egestaum tempor nib et sollicitu.</p>
-                </div>
+                <div class="col w3of4"></div>
+                <div class="col w1of4"></div>
             </div>
             <div class="row">
-                <div class="col">
-                    <p>Suspendisse posuere odio dignissim elit mollis pharetra. Fusce ornare magna ac purus fermentum sit amet consequat odio mattis. Quisque vitae tellus tis neque.</p>
-                </div>
-                <div class="col">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum urna metus, vulputate nec semper vel, imperdiet non lectus. Sed lorem tortor, commodo pretium egestaum tempor nib et sollicitu.</p>
-                </div>
-                <div class="col">
-                    <p>Suspendisse posuere odio dignissim elit mollis pharetra. Fusce ornare magna ac purus fermentum sit amet consequat odio mattis. Quisque vitae tellus tis neque.</p>
-                </div>
+                <div class="col w3of5"></div>
+                <div class="col w1of5"></div>
+                <div class="col w1of5"></div>
             </div>
             <div class="row">
-                 <div class="col">
-                    <p>Suspendisse posuere odio dignissim elit mollis pharetra. Fusce ornare magna ac purus fermentum sit amet consequat odio mattis. Quisque vitae tellus tis neque.</p>
-                </div>
-                <div class="col">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum urna metus, vulputate nec semper vel, imperdiet non lectus. Sed lorem tortor, commodo pretium egestaum tempor nib et sollicitu.</p>
-                </div>
+                <div class="col w4of5"></div>
+                <div class="col w1of5"></div>
             </div>
         </div>
         <div class="section">
