put box sizing back

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             </div>
         </div>
         <div class="anchor" id="fit"></div>
-        <div class="yellow h1of1">
+        <div class="yellow tall">
             <div class="t">
                 <div class="tc">
                     <div class="row">
