remove old files

--- a/index.html
+++ b/index.html
@@ -24,6 +24,11 @@
     </div>
     
     <div class="container box">
+        <div class="anchor" id="header"></div>
+        <div class="bg1">
+            <div class="row">
+            </div>
+        </div>
         <div class="anchor" id="auto"></div>
         <div class="red">
             <div class="row">
