--- a/index.html
+++ b/index.html
@@ -24,46 +24,51 @@
             </li>
         </ul>
     </div>
-    <div class="section fit-widescreen banner" id="wide">
-        <div class="inner">
+    <div class="main">
+        <div class="anchor" id="wide"></div>
+        <div class="section fit-widescreen banner">
+            <div class="inner">
+                <div class="t">
+                    <div class="tc">
+                        <h1 class="title">Morbi at nunc</h1>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="anchor" id="grid"></div>
+        <div class="section debug">
+            <h2>Lorem ipsum dolor adipiscing</h2>
+            <p>Vestibulum sed orci eu dolor dignissim molestie. Curabitur eu orci libero. Ut molestie porta tellus sed rutrum. Suspendisse tristique est cursus neque bibendum gravida.</p>
+            <p>Aenean est lorem, bibendum vestibulum lectus non, varius tempus ligula. Morbi at nunc vel diam dictum eleifend et ut est. Sed sed justo rutrum, fringilla est a, iaculis nulla. Cras tincidunt magna quis ex interdum, sed malesuada purus rutrum. Quisque finibus odio tortor, id aliquam mi iaculis a.</p>
+            <div class="row">
+                <div class="col w1of2"><p>col w1of2</p></div>
+                <div class="col w1of2"><p>col w1of2</p></div>
+            </div>
+            <div class="row">
+                <div class="col w1of3"><p>col w1of3</p></div>
+                <div class="col w1of3"><p>col w1of3</p></div>
+                <div class="col w1of3"><p>col w1of3</p></div>
+            </div>
+            <div class="row">
+                <div class="col w2of3"><p>col w2of3</p></div>
+                <div class="col w1of3"><p>col w1of3</p></div>
+            </div>
+            <div class="row">
+                <div class="col w2of3">
+                    <div class="row">
+                        <div class="col w1of2"><p>col w1of2 - You can nest columns inside each other!</p></div>
+                        <div class="col w1of2"><p>col w1of2</p></div>
+                    </div>
+                </div>
+                <div class="col w1of3"><p>col w1of3</p></div>
+            </div>
+        </div>
+        <div class="anchor" id="ratio"></div>
+        <div class="section fit-height fit-width red">
             <div class="t">
                 <div class="tc">
-                    <h1 class="title">Morbi at nunc</h1>
+                    <h2>Fit height &amp; width</h2>
                 </div>
-            </div>
-        </div>
-    </div>
-    <div class="section debug" id="grid">
-        <h2>Lorem ipsum dolor adipiscing</h2>
-        <p>Vestibulum sed orci eu dolor dignissim molestie. Curabitur eu orci libero. Ut molestie porta tellus sed rutrum. Suspendisse tristique est cursus neque bibendum gravida.</p>
-        <p>Aenean est lorem, bibendum vestibulum lectus non, varius tempus ligula. Morbi at nunc vel diam dictum eleifend et ut est. Sed sed justo rutrum, fringilla est a, iaculis nulla. Cras tincidunt magna quis ex interdum, sed malesuada purus rutrum. Quisque finibus odio tortor, id aliquam mi iaculis a.</p>
-        <div class="row">
-            <div class="col w1of2"><p>col w1of2</p></div>
-            <div class="col w1of2"><p>col w1of2</p></div>
-        </div>
-        <div class="row">
-            <div class="col w1of3"><p>col w1of3</p></div>
-            <div class="col w1of3"><p>col w1of3</p></div>
-            <div class="col w1of3"><p>col w1of3</p></div>
-        </div>
-        <div class="row">
-            <div class="col w2of3"><p>col w2of3</p></div>
-            <div class="col w1of3"><p>col w1of3</p></div>
-        </div>
-        <div class="row">
-            <div class="col w2of3">
-                <div class="row">
-                    <div class="col w1of2"><p>col w1of2 - You can nest columns inside each other!</p></div>
-                    <div class="col w1of2"><p>col w1of2</p></div>
-                </div>
-            </div>
-            <div class="col w1of3"><p>col w1of3</p></div>
-        </div>
-    </div>
-    <div class="section fit-height fit-width red" id="ratio">
-        <div class="t">
-            <div class="tc">
-                <h2>Fit height &amp; width</h2>
             </div>
         </div>
     </div>
