Updated read, minified version

--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="utf-8" />
     <title>Alley</title>
     <meta name="description" content="" />
-    <meta name=viewport content="width=device-width,initial-scale=1" />
+    <meta name="viewport" content="width=device-width,initial-scale=1" />
     <link rel="stylesheet" href="css/banner.css" />
     <link rel="stylesheet" href="css/header.css" />
-    <link rel="stylesheet" href="css/section.css" />
+    <link rel="stylesheet" href="css/layout.css" />
     <link rel="stylesheet" href="css/type.css" />
     <link rel="stylesheet" href="css/debug.css" />
 </head>
